--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,6 +11,7 @@ button {
   margin: 60px 0 0 0;
   background-color: #1c222f;
   color: aliceblue;
+  margin-bottom: 0;
 }
 .btn-div {
   margin-top: 30px;
